Modificado tabla de precios y cards de beneficios

--- a/index.html
+++ b/index.html
@@ -48,24 +48,16 @@
 					<div class="exchange-currency-table">
 						<h2>Monedas</h2>
 						<div class="exchange-chart-currency">
-							<table>
-								<tr>
-									<td class="table__top-left table__left">Bitcoin</td>
-									<td class="table__top-right table__right">$ 1.96 <img alt="icono de tendencia a bajar" class="trending-down" src="./assets/icons/trending-down.svg"></img> </td>
-								</tr>
-								<tr>
-									<td class="table__left">Ethereum</td>
-									<td class="table__right">$ 0.07 <img alt="icono de tendencia a subir" class="trending-up" src="./assets/icons/trending-up.svg"></img> </td>
-								</tr>
-								<tr>
-									<td class="table__left">Ripple</td>
-									<td class="table__right">$ 2.15 <img alt="icono de tendencia a bajar" class="trending-down" src="./assets/icons/trending-down.svg"></img> </td>
-								</tr>
-								<tr>
-									<td class="table__bottom-left table__left">Stellar</td>
-									<td class="table__bottom-right table__right">$ 4.96 <img alt="icono de tendencia a bajar" class="trending-down" src="./assets/icons/trending-down.svg"></img> </td>
-								</tr>
-							</table>
+							<div class="exchange-chart__container">
+								<div class="exchange-chart__container--title">Bitcoin</div>
+								<div class="exchange-chart__container--price">$ 1.96 <span class="trending-down"></span> </div>
+								<div class="exchange-chart__container--title">Ethereum</div>
+								<div class="exchange-chart__container--price">$ 0.07<span class="trending-up"></span></div>
+								<div class="exchange-chart__container--title">Ripple</div>
+								<div class="exchange-chart__container--price">$ 2.15 <span class="trending-down"></span></div>
+								<div class="exchange-chart__container--title">Stellar</div>
+								<div class="exchange-chart__container--price">$ 4.96 <span class="trending-down"></span></div>
+							</div>
 							<img class="right-arrow" src="./assets/icons/vector.svg" alt="icono para mostrar la siguiente tabla" />
 						</div>
 						<div class="exchange-date currency">
@@ -75,24 +67,16 @@
 					<div class="exchange-commission-table">
 						<h2>Comisiones</h2>
 						<div class="exchange-chart-commission">
-							<table>
-								<tr>
-									<td class="table__top-left table__left">Bitrade</td>
-									<td class="table__top-right table__right">$ 12.96</td>
-								</tr>
-								<tr>
-									<td class="table__left">Bitpreco</td>
-									<td class="table__right">$ 13.07</td>
-								</tr>
-								<tr>
-									<td class="table__left">Novadax</td>
-									<td class="table__right">$ 13.15</td>
-								</tr>
-								<tr>
-									<td class="table__bottom-left table__left">Coinext</td>
-									<td class="table__bottom-right table__right">$ 14.96</td>
-								</tr>
-							</table>
+							<div class="exchange-chart__container">
+								<div class="exchange-chart__container--title">Bitrade</div>
+								<div class="exchange-chart__container--price">$ 12.96</div>
+								<div class="exchange-chart__container--title">Bitpreco</div>
+								<div class="exchange-chart__container--price">$ 13.07</div>
+								<div class="exchange-chart__container--title">Novadax</div>
+								<div class="exchange-chart__container--price">$ 13.15</div>
+								<div class="exchange-chart__container--title">Coinext</div>
+								<div class="exchange-chart__container--price">$ 14.96</div>
+							</div>
 							<img class="left-arrow" src="./assets/icons/vector.svg" alt="icono para mostrar la tabla anterior" />
 						</div>
 						<div class="exchange-date commission">
