Mostrar/Ocultar Info

--- a/index.html
+++ b/index.html
@@ -163,19 +163,51 @@
 					<div class="question-container">
 						<div class="question">
 							<p>Batabit me permite hacer compras en su plataforma?</p>
-							<img src="./assets/icons/arrow-down.svg" alt="icono para mostrar más">
+							<button class="show-more-buttons" onclick="showInfo(0)">
+                <img src="./assets/icons/arrow-down.svg" alt="mostrar más información"></img>
+              </button>
+              <button class="show-less-buttons hide" onclick="hideInfo(0)">
+                <img src="./assets/icons/show-less.svg" alt="mostrar menos información">
+              </button>
+              <p class="question-answer hide">
+                No. Batabit es una plataforma exclusivamente para consulta de información y toma de decisiones. Todavía no ofrecemos servicios de compra o venta.
+              </p>
 						</div>
 						<div class="question">
 							<p>Qué es Bitcoin?</p>
-							<img src="./assets/icons/arrow-down.svg" alt="icono para mostrar más">
+							<button class="show-more-buttons" onclick="showInfo(1)">
+                <img src="./assets/icons/arrow-down.svg" alt="mostrar más información"></img>
+              </button>
+              <button class="show-less-buttons hide" onclick="hideInfo(1)">
+                <img src="./assets/icons/show-less.svg" alt="mostrar menos información">
+              </button>
+              <p class="question-answer hide">
+                No. Batabit es una plataforma exclusivamente para consulta de información y toma de decisiones. Todavía no ofrecemos servicios de compra o venta.
+              </p>
 						</div>
 						<div class="question">
 							<p>Cómo puedo realizar una transacción en bitcoins?</p>
-							<img src="./assets/icons/arrow-down.svg" alt="icono para mostrar más">
+							<button class="show-more-buttons" onclick="showInfo(2)">
+                <img src="./assets/icons/arrow-down.svg" alt="mostrar más información"></img>
+              </button>
+              <button class="show-less-buttons hide" onclick="hideInfo(2)">
+                <img src="./assets/icons/show-less.svg" alt="mostrar menos información">
+              </button>
+              <p class="question-answer hide">
+                No. Batabit es una plataforma exclusivamente para consulta de información y toma de decisiones. Todavía no ofrecemos servicios de compra o venta.
+              </p>
 						</div>
 						<div class="question">
 							<p>Cómo aseguro mis compras?</p>
-							<img src="./assets/icons/arrow-down.svg" alt="icono para mostrar más">
+							<button class="show-more-buttons" onclick="showInfo(3)">
+                <img src="./assets/icons/arrow-down.svg" alt="mostrar más información"></img>
+              </button>
+              <button class="show-less-buttons hide" onclick="hideInfo(3)">
+                <img src="./assets/icons/show-less.svg" alt="mostrar menos información">
+              </button>
+              <p class="question-answer hide">
+                No. Batabit es una plataforma exclusivamente para consulta de información y toma de decisiones. Todavía no ofrecemos servicios de compra o venta.
+              </p>
 						</div>
 					</div>
 				</section>	
@@ -192,5 +224,6 @@
 				<p>® Batatabit 2020</p>
 			</div>
 		</footer>
+    <script src="./index.js"></script>
 	</body>
 </html>
